# ChangeLog for net-im/mu-conference
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Oct 2008; justin Lecher <justin@j-schmitz.net> metadata.xml,
  +mu-conference-0.7-r1.ebuild:
  bump, patch from Jason Dusek
