@@ -1,6 +1,10 @@
 # ChangeLog for net-im/mu-conference
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  31 Mar 2011; Justin Lecher <jlec@gentoo.org> -mu-conference-0.7.ebuild,
+  mu-conference-0.7-r1.ebuild:
+  Fixed up ebuild
 
   09 Oct 2008; justin Lecher <justin@j-schmitz.net> metadata.xml,
   +mu-conference-0.7-r1.ebuild:
